move leaderboard to a periodic job
