# gen/go/proto/server.pb.gw.go
@@ -145,6 +145,24 @@ func local_request_Arena_GetLeaderboard_0(ctx context.Context, marshaler runtime
 
 }
 
+func request_Arena_RegenerateLeadeboard_0(ctx context.Context, marshaler runtime.Marshaler, client ArenaClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq RegenerateLeaderboardRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.RegenerateLeadeboard(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_Arena_RegenerateLeadeboard_0(ctx context.Context, marshaler runtime.Marshaler, server ArenaServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq RegenerateLeaderboardRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.RegenerateLeadeboard(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterArenaHandlerServer registers the http handlers for service Arena to "mux".
 // UnaryRPC     :call ArenaServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -224,6 +242,31 @@ func RegisterArenaHandlerServer(ctx context.Context, mux *runtime.ServeMux, serv
 		}
 
 		forward_Arena_GetLeaderboard_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_Arena_RegenerateLeadeboard_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/choices.v1.Arena/RegenerateLeadeboard", runtime.WithHTTPPathPattern("/v1/regenerateLeaderboard"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_Arena_RegenerateLeadeboard_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Arena_RegenerateLeadeboard_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -334,6 +377,28 @@ func RegisterArenaHandlerClient(ctx context.Context, mux *runtime.ServeMux, clie
 
 	})
 
+	mux.Handle("POST", pattern_Arena_RegenerateLeadeboard_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/choices.v1.Arena/RegenerateLeadeboard", runtime.WithHTTPPathPattern("/v1/regenerateLeaderboard"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_Arena_RegenerateLeadeboard_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_Arena_RegenerateLeadeboard_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -343,6 +408,8 @@ var (
 	pattern_Arena_RateChoices_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "choice", "id", "rate"}, ""))
 
 	pattern_Arena_GetLeaderboard_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "leaderboard"}, ""))
+
+	pattern_Arena_RegenerateLeadeboard_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "regenerateLeaderboard"}, ""))
 )
 
 var (
@@ -351,4 +418,6 @@ var (
 	forward_Arena_RateChoices_0 = runtime.ForwardResponseMessage
 
 	forward_Arena_GetLeaderboard_0 = runtime.ForwardResponseMessage
+
+	forward_Arena_RegenerateLeadeboard_0 = runtime.ForwardResponseMessage
 )
